# CVulkanVoxelEngine

./: CMakeLists.txt  CMakePresets.json
include/: app.h  file_reader.h  v_err.h
include/cvve/: buffer.h  command.h  device.h  draw.h  element.h  frame_buffers.h  graphics_pipeline.h  instance.h  queue.h  shader.h  surface.h  swapchain.h  swapchain_support.h  uniform.h  validation_layers.h  vertex.h
shaders/: default.vert
src/: app.c  file_reader.c  main.c  v_err.c
src/cvve/: buffer.c  command.c  device.c  draw.c  element.c  frame_buffers.c  graphics_pipeline.c  instance.c  queue.c  shader.c  surface.c  swapchain.c  uniform.c  validation_layers.c  vertex.c
